@@ -1,3 +1,7 @@
+2010-11-26  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* writet1.c: Still more minor tweaks.
+
 2010-11-26  Thanh Han The  <thanh@river-valley.org>
 
 	* writet1.c (t1_check_unusual_charstring): switch EOL to space
